# hsim

./: .gitmodules  CMakeLists.txt  README.md  remake.sh
hsim/: CMakeLists.txt
hsim/include/hsim/: Collision.hpp  Colors.hpp  Geometry.hpp  JumpSolver.hpp  Math.hpp  Models.hpp  MotionPath.hpp  ParabolaMotionValidator.hpp  ParabolicPlanner.hpp  Physics.hpp  Plans.hpp  Project.hpp  PxEngine.hpp  RayStateSampler.hpp  RealRangeDichotomy.hpp  Scene.hpp  Simulation.hpp  SubtractiveObject.hpp  Tess.hpp
hsim/src/: Collision.cpp  Colors.cpp  Geometry.cpp  Math.cpp  Plans.cpp  Project.cpp  RealRangeDichotomy.cpp  Simulation.cpp
macpoc/: CMakeLists.txt  README.md
macpoc/src/: FileUtils.hpp  FileUtils.mm  SnippetCamera.cpp  SnippetCamera.hpp  SnippetRender.cpp  SnippetRender.hpp  main.cpp
